--- a/Duality.gg/Base.lproj/Main.storyboard
+++ b/Duality.gg/Base.lproj/Main.storyboard
@@ -8,39 +8,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Duality_gg" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GT7-Ub-3i5">
-                                <rect key="frame" x="145.5" y="380" width="123" height="30"/>
-                                <state key="normal" title="Sign In with riot id"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YH1-Ia-Oxo">
-                                <rect key="frame" x="111" y="468" width="192" height="30"/>
-                                <state key="normal" title="Continue with out logging in"/>
-                            </button>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="GT7-Ub-3i5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="380" id="4hS-xp-Ym6"/>
-                            <constraint firstItem="YH1-Ia-Oxo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="63z-Ao-KpI"/>
-                            <constraint firstItem="YH1-Ia-Oxo" firstAttribute="top" secondItem="GT7-Ub-3i5" secondAttribute="bottom" constant="58" id="MLt-BS-DHy"/>
-                            <constraint firstItem="YH1-Ia-Oxo" firstAttribute="top" secondItem="GT7-Ub-3i5" secondAttribute="bottom" constant="58" id="OZV-Vc-aQq"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YH1-Ia-Oxo" secondAttribute="bottom" constant="169" id="X42-NR-GlC"/>
-                            <constraint firstItem="GT7-Ub-3i5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wUI-Gh-kL5"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-4" y="96"/>
-        </scene>
         <!--Find Player-->
         <scene sceneID="btE-cP-8SJ">
             <objects>
@@ -398,7 +365,7 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zOL-K4-sSP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2808.6956521739135" y="209.59821428571428"/>
+            <point key="canvasLocation" x="4571" y="129"/>
         </scene>
         <!--Match History Table View Controller-->
         <scene sceneID="GuC-GN-rHB">
@@ -551,7 +518,7 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h7W-r6-nSJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3594.202898550725" y="226.33928571428569"/>
+            <point key="canvasLocation" x="5357" y="146"/>
         </scene>
         <!--Add Match View Controller-->
         <scene sceneID="q70-RV-qgv">
@@ -689,9 +656,9 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m2E-ry-mXa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4413.04347826087" y="170.75892857142856"/>
+            <point key="canvasLocation" x="6175" y="90"/>
         </scene>
-        <!--Login View Controller-->
+        <!--Profile-->
         <scene sceneID="dOJ-eY-S9C">
             <objects>
                 <viewController storyboardIdentifier="LoginViewController" id="dmV-nA-Cdi" customClass="LoginViewController" customModule="Duality_gg" customModuleProvider="target" sceneMemberID="viewController">
@@ -734,13 +701,15 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                             <constraint firstItem="eNO-9A-nkK" firstAttribute="centerX" secondItem="VOu-BD-x8R" secondAttribute="centerX" id="Oeg-gN-2wq"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Profile" image="person.fill" catalog="system" id="P6v-5n-Lz9"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="LoginButton" destination="eNO-9A-nkK" id="Tzr-dP-opN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2vy-pP-apK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3765" y="-613"/>
+            <point key="canvasLocation" x="2741" y="136"/>
         </scene>
         <!--User Auth View Controller-->
         <scene sceneID="XHj-HQ-tfL">
@@ -859,7 +828,7 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nWz-bf-M0S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4633.3333333333339" y="-613.39285714285711"/>
+            <point key="canvasLocation" x="3642" y="181"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="vRb-hN-eMz">
@@ -875,13 +844,13 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                         <segue destination="k3l-82-kXt" kind="relationship" relationship="viewControllers" id="Czi-rQ-dp0"/>
                         <segue destination="1ew-Cb-Gdt" kind="relationship" relationship="viewControllers" id="fGd-Ph-AGh"/>
                         <segue destination="Deu-67-dc1" kind="relationship" relationship="viewControllers" id="RTD-n6-oyw"/>
-                        <segue destination="j2X-Xm-uVF" kind="relationship" relationship="viewControllers" id="y6p-nb-EXP"/>
+                        <segue destination="dmV-nA-Cdi" kind="relationship" relationship="viewControllers" id="RA4-Ye-ss9"/>
                         <segue destination="i0F-U2-7Pl" kind="relationship" relationship="viewControllers" id="ohe-wf-mg6"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="STM-Ni-sdi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="913" y="96"/>
+            <point key="canvasLocation" x="587" y="136"/>
         </scene>
         <!--Calculator-->
         <scene sceneID="IvA-LK-bKR">
