--- a/Duality.gg/Base.lproj/Main.storyboard
+++ b/Duality.gg/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="v2G-2s-qMn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dmV-nA-Cdi">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -365,7 +365,7 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zOL-K4-sSP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4571" y="129"/>
+            <point key="canvasLocation" x="2587" y="190"/>
         </scene>
         <!--Match History Table View Controller-->
         <scene sceneID="GuC-GN-rHB">
@@ -518,7 +518,7 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h7W-r6-nSJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5357" y="146"/>
+            <point key="canvasLocation" x="3404" y="206"/>
         </scene>
         <!--Add Match View Controller-->
         <scene sceneID="q70-RV-qgv">
@@ -656,9 +656,9 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m2E-ry-mXa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6175" y="90"/>
+            <point key="canvasLocation" x="4191" y="151"/>
         </scene>
-        <!--Profile-->
+        <!--Login View Controller-->
         <scene sceneID="dOJ-eY-S9C">
             <objects>
                 <viewController storyboardIdentifier="LoginViewController" id="dmV-nA-Cdi" customClass="LoginViewController" customModule="Duality_gg" customModuleProvider="target" sceneMemberID="viewController">
@@ -701,7 +701,6 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                             <constraint firstItem="eNO-9A-nkK" firstAttribute="centerX" secondItem="VOu-BD-x8R" secondAttribute="centerX" id="Oeg-gN-2wq"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Profile" image="person.fill" catalog="system" id="P6v-5n-Lz9"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="LoginButton" destination="eNO-9A-nkK" id="Tzr-dP-opN"/>
@@ -709,7 +708,7 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2vy-pP-apK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2741" y="136"/>
+            <point key="canvasLocation" x="-1393" y="171"/>
         </scene>
         <!--User Auth View Controller-->
         <scene sceneID="XHj-HQ-tfL">
@@ -729,7 +728,7 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cLX-P3-mly">
+                            <textField opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cLX-P3-mly">
                                 <rect key="frame" x="117.5" y="271" width="179" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="ZJn-kp-b50"/>
@@ -828,12 +827,12 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nWz-bf-M0S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3642" y="181"/>
+            <point key="canvasLocation" x="-510" y="171"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Tab Bar View Controller-->
         <scene sceneID="vRb-hN-eMz">
             <objects>
-                <tabBarController id="v2G-2s-qMn" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabBarView" id="v2G-2s-qMn" customClass="TabBarViewController" customModule="Duality_gg" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="I6x-Wh-8lG"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IMM-wE-b8G">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
@@ -844,7 +843,7 @@ Patricio Tena CSF A01027293                                         Maestro Dr. 
                         <segue destination="k3l-82-kXt" kind="relationship" relationship="viewControllers" id="Czi-rQ-dp0"/>
                         <segue destination="1ew-Cb-Gdt" kind="relationship" relationship="viewControllers" id="fGd-Ph-AGh"/>
                         <segue destination="Deu-67-dc1" kind="relationship" relationship="viewControllers" id="RTD-n6-oyw"/>
-                        <segue destination="dmV-nA-Cdi" kind="relationship" relationship="viewControllers" id="RA4-Ye-ss9"/>
+                        <segue destination="j2X-Xm-uVF" kind="relationship" relationship="viewControllers" id="7Vw-8i-NJu"/>
                         <segue destination="i0F-U2-7Pl" kind="relationship" relationship="viewControllers" id="ohe-wf-mg6"/>
                     </connections>
                 </tabBarController>
